Update local file associations in notebook

--- a/pvlib_python/Test Scripts 1.ipynb
+++ b/pvlib_python/Test Scripts 1.ipynb
@@ -29,7 +29,7 @@
      "input": [
       "import pvl_readtmy3 as tmy3\n",
       "reload(tmy3)\n",
-      "TMY, meta=tmy3.pvl_readtmy3(FileName='/Users/robandrews/Dropbox/My_Documents/Documents/Projects/Data/TMY/tmy3/723650TY.csv')"
+      "TMY, meta=tmy3.pvl_readtmy3(FileName='723650TY.csv')"
      ],
      "language": "python",
      "metadata": {},
@@ -51,7 +51,7 @@
        ]
       }
      ],
-     "prompt_number": 98
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
