updates to maintain operability

--- a/pvlib/Test_Scripts_1.ipynb
+++ b/pvlib/Test_Scripts_1.ipynb
@@ -74,7 +74,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -91,11 +91,11 @@
        "stream": "stdout",
        "text": [
         "NM\n",
-        "-106.62\n"
+        "-79.2\n"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -123,7 +123,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 14,
+       "prompt_number": 5,
        "text": [
         "<class 'pandas.tseries.index.DatetimeIndex'>\n",
         "[1981-03-26 00:00:00, ..., 1981-03-26 23:00:00]\n",
@@ -131,7 +131,7 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
@@ -140,15 +140,6 @@
      "source": [
       "Get solar angles"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -167,7 +158,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -186,39 +177,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 24,
+       "prompt_number": 7,
        "text": [
-        "<matplotlib.legend.Legend at 0x112512090>"
+        "<matplotlib.legend.Legend at 0x106d2bad0>"
        ]
       }
      ],
-     "prompt_number": 24
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "plot(TMY.index[rng],TMY.SunAz[rng],label='Azimuth_eph')\n",
-      "plot(TMY.index[rng],TMY.SunEl[rng],label='Zenith_eph')\n",
-      "plot(TMY.index[rng],TMY.SunAz_spa[rng],label='Azimuth_spa')\n",
-      "plot(TMY.index[rng],TMY.SunEl_spa[rng],label='Azimuth_eph')\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "IndexError",
-       "evalue": "arrays used as indices must be of integer (or boolean) type",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-17-32d3a1d22aa9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTMY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrng\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mTMY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSunAz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrng\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Azimuth_eph'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTMY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrng\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mTMY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSunEl\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrng\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Zenith_eph'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTMY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrng\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mTMY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSunAz_spa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrng\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Azimuth_spa'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTMY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrng\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mTMY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSunEl_spa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrng\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Azimuth_eph'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/usr/local/Cellar/python/2.7.5/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/pandas/tseries/index.pyc\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1358\u001b[0m                     \u001b[0mnew_offset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moffset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1359\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1360\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marr_idx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1361\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1362\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mIndexError\u001b[0m: arrays used as indices must be of integer (or boolean) type"
-       ]
-      }
-     ],
-     "prompt_number": 17
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
@@ -240,7 +205,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 8
     },
     {
      "cell_type": "heading",
@@ -265,7 +230,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 9
     },
     {
      "cell_type": "heading",
@@ -280,8 +245,8 @@
      "collapsed": false,
      "input": [
       "\n",
-      "TMY['In_Plane_SkyDiffuse']=pvlib.pvl_perez(SurfTilt=meta.SurfTilt,\n",
-      "                                            SurfAz=meta.SurfAz,\n",
+      "TMY['In_Plane_SkyDiffuse']=pvlib.pvl_perez(SurfTilt=meta['SurfTilt'],\n",
+      "                                            SurfAz=meta['SurfAz'],\n",
       "                                            DHI=TMY.DHI,\n",
       "                                            DNI=TMY.DNI,\n",
       "                                            HExtra=TMY.HExtra,\n",
@@ -291,150 +256,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "> /Users/robandrews/Dropbox/My_Documents/Documents/Projects/Code/PVLIB/PVLIB_Python/pvlib/pvl_perez.py(154)pvl_perez()\n",
-        "-> e = ((var.DHI[Dhfilter] + var.DNI[Dhfilter])/var.DHI[Dhfilter]+kappa*z[Dhfilter]**3)/(1+kappa*z[Dhfilter]**3).reindex_like(var.SunZen)\n"
-       ]
-      },
-      {
-       "name": "stdout",
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "(Pdb) (var.DHI[Dhfilter] + var.DNI[Dhfilter])/var.DHI[Dhfilter]+kappa*z[Dhfilter]**3)/(1+kappa*z[Dhfilter]**3)\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "*** SyntaxError: invalid syntax (<stdin>, line 1)\n"
-       ]
-      },
-      {
-       "name": "stdout",
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "(Pdb) (var.DHI[Dhfilter] + var.DNI[Dhfilter])/var.DHI[Dhfilter]+kappa*z[Dhfilter]**3)/(1+kappa*z[Dhfilter]**3))\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "*** SyntaxError: invalid syntax (<stdin>, line 1)\n"
-       ]
-      },
-      {
-       "name": "stdout",
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "(Pdb) ((var.DHI[Dhfilter] + var.DNI[Dhfilter])/var.DHI[Dhfilter]+kappa*z[Dhfilter]**3)/(1+kappa*z[Dhfilter]**3)\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "datetime\n",
-        "1981-01-01 08:00:00     5.503151\n",
-        "1981-01-01 09:00:00     7.593518\n",
-        "1981-01-01 10:00:00     8.752368\n",
-        "1981-01-01 11:00:00     9.986082\n",
-        "1981-01-01 12:00:00     8.895007\n",
-        "1981-01-01 13:00:00    10.207041\n",
-        "1981-01-01 14:00:00    14.133560\n",
-        "1981-01-01 15:00:00    12.600212\n",
-        "1981-01-01 16:00:00    10.409183\n",
-        "1981-01-01 17:00:00     7.527462\n",
-        "1981-01-02 08:00:00     5.499904\n",
-        "1981-01-02 09:00:00     7.591936\n",
-        "1981-01-02 10:00:00     8.755522\n",
-        "1981-01-02 11:00:00     9.996571\n",
-        "1981-01-02 12:00:00     8.910453\n",
-        "...\n",
-        "1981-12-30 13:00:00     6.675042\n",
-        "1981-12-30 14:00:00     6.777604\n",
-        "1981-12-30 15:00:00     7.691754\n",
-        "1981-12-30 16:00:00     7.513605\n",
-        "1981-12-30 17:00:00     8.095512\n",
-        "1981-12-31 08:00:00    33.949033\n",
-        "1981-12-31 09:00:00     7.596952\n",
-        "1981-12-31 10:00:00     9.109907\n",
-        "1981-12-31 11:00:00     9.654785\n",
-        "1981-12-31 12:00:00    10.380018\n",
-        "1981-12-31 13:00:00    10.185759\n",
-        "1981-12-31 14:00:00     8.457712\n",
-        "1981-12-31 15:00:00     9.068874\n",
-        "1981-12-31 16:00:00     7.811573\n",
-        "1981-12-31 17:00:00     8.167559\n",
-        "Length: 4531\n"
-       ]
-      },
-      {
-       "name": "stdout",
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "(Pdb) n\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "> /Users/robandrews/Dropbox/My_Documents/Documents/Projects/Code/PVLIB/PVLIB_Python/pvlib/pvl_perez.py(155)pvl_perez()\n",
-        "-> ebin = pd.Series(np.zeros(var.DHI.shape[0]),index=e.index)\n"
-       ]
-      },
-      {
-       "name": "stdout",
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "(Pdb) n\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "> /Users/robandrews/Dropbox/My_Documents/Documents/Projects/Code/PVLIB/PVLIB_Python/pvlib/pvl_perez.py(158)pvl_perez()\n",
-        "-> ebin[(e<1.065)]= 1\n"
-       ]
-      },
-      {
-       "name": "stdout",
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "(Pdb) n\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "> /Users/robandrews/Dropbox/My_Documents/Documents/Projects/Code/PVLIB/PVLIB_Python/pvlib/pvl_perez.py(159)pvl_perez()\n",
-        "-> ebin[(e>=1.065) & (e<1.23)]= 2\n"
-       ]
-      },
-      {
-       "name": "stdout",
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "(Pdb) c\n"
-       ]
-      }
-     ],
-     "prompt_number": 9
+     "outputs": [],
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -449,12 +272,12 @@
      "collapsed": false,
      "input": [
       "\n",
-      "TMY['GR']=pvlib.pvl_grounddiffuse(GHI=TMY.GHI,Albedo=meta.Albedo,SurfTilt=meta.SurfTilt)"
+      "TMY['GR']=pvlib.pvl_grounddiffuse(GHI=TMY.GHI,Albedo=meta['Albedo'],SurfTilt=meta['SurfTilt'])"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 14
     },
     {
      "cell_type": "heading",
@@ -469,12 +292,12 @@
      "collapsed": false,
      "input": [
       "\n",
-      "TMY['AOI']=pvlib.pvl_getaoi(SunAz=TMY.SunAz,SunZen=TMY.SunZen,SurfTilt=meta.SurfTilt,SurfAz=meta.SurfAz)"
+      "TMY['AOI']=pvlib.pvl_getaoi(SunAz=TMY.SunAz,SunZen=TMY.SunZen,SurfTilt=meta['SurfTilt'],SurfAz=meta['SurfAz'])"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 15
     },
     {
      "cell_type": "heading",
@@ -493,14 +316,14 @@
       "                                DNI=TMY.DNI,\n",
       "                                In_Plane_SkyDiffuse=TMY.In_Plane_SkyDiffuse,\n",
       "                                GR=TMY.GR,\n",
-      "                                SurfTilt=meta.SurfTilt,\n",
-      "                                SurfAz=meta.SurfAz)\n",
+      "                                SurfTilt=meta['SurfTilt'],\n",
+      "                                SurfAz=meta['SurfAz'])\n",
       "\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 16
     },
     {
      "cell_type": "heading",
@@ -525,7 +348,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 17
     },
     {
      "cell_type": "heading",
@@ -550,7 +373,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 18,
        "text": [
         "Vintage                                                   2009\n",
         "Area                                                     1.701\n",
@@ -598,7 +421,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 18
     },
     {
      "cell_type": "heading",
@@ -623,7 +446,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 19,
        "text": [
         "Vac          4.800000e+02\n",
         "Paco         3.330000e+05\n",
@@ -643,7 +466,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 19
     },
     {
      "cell_type": "heading",
@@ -675,7 +498,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 20
     },
     {
      "cell_type": "heading",
@@ -719,7 +542,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 21
     },
     {
      "cell_type": "heading",
@@ -740,7 +563,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
