compatability with tmy module

--- a/pvlib/Test_Scripts_1.ipynb
+++ b/pvlib/Test_Scripts_1.ipynb
@@ -29,7 +29,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 24
     },
     {
      "cell_type": "heading",
@@ -53,12 +53,12 @@
      "input": [
       "\n",
       "fname='723650TY.csv' #Use absolute path if the file is not in the local directory\n",
-      "TMY, meta=pvlib.pvl_readtmy3(FileName=fname)"
+      "TMY, meta=pvlib.tmy.readtmy3(filename=fname)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -74,7 +74,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -95,7 +95,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
@@ -123,7 +123,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 8,
        "text": [
         "<class 'pandas.tseries.index.DatetimeIndex'>\n",
         "[1981-03-26 00:00:00, ..., 1981-03-26 23:00:00]\n",
@@ -131,7 +131,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 8
     },
     {
      "cell_type": "heading",
@@ -158,7 +158,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -177,13 +177,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 10,
        "text": [
-        "<matplotlib.legend.Legend at 0x106d2bad0>"
+        "<matplotlib.legend.Legend at 0x107e16ad0>"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 10
     },
     {
      "cell_type": "heading",
@@ -205,7 +205,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -230,7 +230,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 12
     },
     {
      "cell_type": "heading",
@@ -257,7 +257,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 13
     },
     {
      "cell_type": "heading",
