--- a/pvlib/docs/tutorials/TS_2_Irradiance_functions.ipynb
+++ b/pvlib/docs/tutorials/TS_2_Irradiance_functions.ipynb
@@ -50,7 +50,8 @@
       "meta['Albedo'] = 0.2\n",
       "\n",
       "# create pvlib Location object\n",
-      "sand_point = pvlib.location.Location(meta['latitude'], meta['longitude'], tz='US/Alaska', altitude=meta['altitude'])\n",
+      "sand_point = pvlib.location.Location(meta['latitude'], meta['longitude'], tz='US/Alaska', \n",
+      "                                     altitude=meta['altitude'], name=meta['Name'].replace('\"',''))\n",
       "print(sand_point)\n",
       "\n",
       "# TMY data seems to be given as hourly data with time stamp at the end\n",
@@ -59,7 +60,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "SAND POINT: latitude=55.317, longitude=-160.517, tz=US/Alaska, altitude=7.0\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -162,7 +172,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 3,
        "text": [
         "                           apparent_elevation  apparent_azimuth  elevation  \\\n",
         "Time                                                                         \n",
@@ -182,7 +192,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -192,8 +202,6 @@
       "TMY['SunAz'] = solpos['apparent_elevation']\n",
       "TMY['SunZen'] =  solpos['apparent_zenith']\n",
       "\n",
-      "\n",
-      "# Will H: stopped here because the rest of this needs restructuring\n",
       "TMY['HExtra'] = pvlib.irradiance.extraradiation(doy=TMY.index.dayofyear)\n",
       "\n",
       "TMY['AM'] = pvlib.atmosphere.relativeairmass(z=TMY.SunZen)\n",
@@ -214,7 +222,7 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-16-e09da8cb8cdf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mTMY\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'HExtra'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpvlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mirradiance\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextraradiation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdoy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTMY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdayofyear\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mTMY\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'AM'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpvlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0matmosphere\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrelativeairmass\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTMY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSunZen\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mDFOut\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpvlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclearsky\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTime\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTMY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mGHI\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTMY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGHI\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSunZen\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTMY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSunZen\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m<ipython-input-4-0523b848c9cd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mTMY\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'HExtra'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpvlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mirradiance\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextraradiation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdoy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTMY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdayofyear\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mTMY\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'AM'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpvlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0matmosphere\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrelativeairmass\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTMY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSunZen\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mDFOut\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpvlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclearsky\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTime\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTMY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mGHI\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTMY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGHI\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSunZen\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTMY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSunZen\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
         "\u001b[1;32m/home/will/git_repos/pythonic-PVLIB/pvlib/atmosphere.pyc\u001b[0m in \u001b[0;36mrelativeairmass\u001b[1;34m(z, model)\u001b[0m\n\u001b[0;32m    227\u001b[0m   Expect={'z': ('array','num','x<=90','x>=0'),\n\u001b[0;32m    228\u001b[0m       'model': ('default','default=kastenyoung1989')}\n\u001b[1;32m--> 229\u001b[1;33m   \u001b[0mvar\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpvt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mParse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mVars\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mExpect\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    230\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    231\u001b[0m   \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'kastenyoung1989'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mvar\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
         "\u001b[1;32m/home/will/git_repos/pythonic-PVLIB/pvlib/pvl_tools.pyc\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, dct, Expect)\u001b[0m\n\u001b[0;32m     78\u001b[0m     '''\n\u001b[0;32m     79\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdct\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mExpect\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 80\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparse_fcn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdct\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mExpect\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     81\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     82\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mparse_fcn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mExpect\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
         "\u001b[1;32m/home/will/git_repos/pythonic-PVLIB/pvlib/pvl_tools.pyc\u001b[0m in \u001b[0;36mparse_fcn\u001b[1;34m(self, kwargs, Expect)\u001b[0m\n\u001b[0;32m    196\u001b[0m                                     \u001b[1;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Error: Numeric input \"'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0marg\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m' \" fails on logical test \" '\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreg\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mstring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'\"'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    197\u001b[0m                             \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 198\u001b[1;33m                                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlambdastring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0marg\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    199\u001b[0m                                     \u001b[1;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Error: Numeric input \"'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0marg\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m' \" fails on logical test \" '\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreg\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mstring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'\"'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    200\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -222,7 +230,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
