dded version numbers

--- a/docs/tutorials/pvsystem.ipynb
+++ b/docs/tutorials/pvsystem.ipynb
@@ -11863,7 +11863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -11895,11 +11895,19 @@
         {
          "module": "matplotlib",
          "version": "1.4.3"
+        },
+        {
+         "module": "pandas",
+         "version": "0.15.2"
+        },
+        {
+         "module": "pvlib",
+         "version": "0.2.0dev"
         }
        ]
       },
       "text/html": [
-       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.8 32bit [MSC v.1500 32 bit (Intel)]</td></tr><tr><td>IPython</td><td>3.0.0</td></tr><tr><td>OS</td><td>Windows 7 6.1.7601 SP1</td></tr><tr><td>numpy</td><td>1.9.2</td></tr><tr><td>scipy</td><td>0.15.1</td></tr><tr><td>matplotlib</td><td>1.4.3</td></tr><tr><td colspan='2'>Sun Jun 21 22:06:18 2015 South Africa Standard Time</td></tr></table>"
+       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.8 32bit [MSC v.1500 32 bit (Intel)]</td></tr><tr><td>IPython</td><td>3.0.0</td></tr><tr><td>OS</td><td>Windows 7 6.1.7601 SP1</td></tr><tr><td>numpy</td><td>1.9.2</td></tr><tr><td>scipy</td><td>0.15.1</td></tr><tr><td>matplotlib</td><td>1.4.3</td></tr><tr><td>pandas</td><td>0.15.2</td></tr><tr><td>pvlib</td><td>0.2.0dev</td></tr><tr><td colspan='2'>Mon Jun 22 07:54:17 2015 South Africa Standard Time</td></tr></table>"
       ],
       "text/latex": [
        "\\begin{tabular}{|l|l|}\\hline\n",
@@ -11910,7 +11918,9 @@
        "numpy & 1.9.2 \\\\ \\hline\n",
        "scipy & 0.15.1 \\\\ \\hline\n",
        "matplotlib & 1.4.3 \\\\ \\hline\n",
-       "\\hline \\multicolumn{2}{|l|}{Sun Jun 21 22:06:18 2015 South Africa Standard Time} \\\\ \\hline\n",
+       "pandas & 0.15.2 \\\\ \\hline\n",
+       "pvlib & 0.2.0dev \\\\ \\hline\n",
+       "\\hline \\multicolumn{2}{|l|}{Mon Jun 22 07:54:17 2015 South Africa Standard Time} \\\\ \\hline\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -11921,17 +11931,19 @@
        "numpy 1.9.2\n",
        "scipy 0.15.1\n",
        "matplotlib 1.4.3\n",
-       "Sun Jun 21 22:06:18 2015 South Africa Standard Time"
+       "pandas 0.15.2\n",
+       "pvlib 0.2.0dev\n",
+       "Mon Jun 22 07:54:17 2015 South Africa Standard Time"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%load_ext version_information\n",
-    "%version_information numpy, scipy, matplotlib"
+    "%version_information numpy, scipy, matplotlib, pandas, pvlib"
    ]
   },
   {
